wizards fix step alignment

--- a/_sass/includes/_wizard.sass
+++ b/_sass/includes/_wizard.sass
@@ -44,7 +44,7 @@
 						color: #355460
 						cursor: not-allowed
 					&:first-child
-						padding-top: 10px
+						padding-top: 13px
 		.step-content
 			box-sizing: border-box
 			width: 80%
